# memd

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile.dev  QUICKSTART.md  README.md  TESTING.md  docker-compose.yml  docker-dev.sh  install.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-skeleton-+-mcp-server/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-persistent-cold-store/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-dense-warm-index-/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-sparse-lexical-+-fusion/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-VERIFICATION.md
.planning/phases/04-sparse-lexical-+-fusion**---bm25-indexing,-rrf-fusion,-feature-based-reranker/: 04-CONTEXT.md
.planning/phases/04.1-pooling-strategy-support/: 04.1-01-PLAN.md  04.1-01-SUMMARY.md  04.1-02-PLAN.md  04.1-02-SUMMARY.md  04.1-03-PLAN.md  04.1-03-SUMMARY.md  04.1-CONTEXT.md  04.1-RESEARCH.md  04.1-VERIFICATION.md
.planning/phases/05-hot-tier-+-cache---hot-cache,-semantic-cache,-promotion/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/phases/05-hot-tier-+-cache---hot-cache,-semantic-cache,-promotion/demotion-logic/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-04-PLAN.md  05-05-PLAN.md  05-CONTEXT.md  05-RESEARCH.md
.planning/phases/06-structural-indexes/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-06-PLAN.md  06-06-SUMMARY.md  06-07-PLAN.md  06-07-SUMMARY.md  06-08-PLAN.md  06-08-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-compaction-+-cleanup**---tombstone-filtering,-segment-merges,-hnsw-rebuild/: 07-CONTEXT.md  07-RESEARCH.md
.planning/phases/07-compaction-cleanup/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-06-PLAN.md  07-06-SUMMARY.md  07-VERIFICATION.md
configs/: default.toml
crates/memd/: Cargo.toml
crates/memd/src/: chunking.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  types.rs
crates/memd/src/compaction/: hnsw_rebuild.rs  metrics.rs  mod.rs  runner.rs  segment_merge.rs  throttle.rs  tombstone_audit.rs
crates/memd/src/embeddings/: candle_embedder.rs  download.rs  mock.rs  mod.rs  onnx.rs  python_embedder.rs  traits.rs
crates/memd/src/index/: bm25.rs  embedding_cache.rs  hnsw.rs  mod.rs  sparse.rs
crates/memd/src/mcp/: error.rs  handlers.rs  mod.rs  protocol.rs  server.rs  tools.rs
crates/memd/src/retrieval/: fusion.rs  mod.rs  packer.rs  reranker.rs
crates/memd/src/store/: dense.rs  feedback.rs  hybrid.rs  memory.rs  mod.rs  persistent.rs  shared_add.rs  tenant.rs  tombstone.rs
crates/memd/src/store/metadata/: mod.rs  sqlite.rs
crates/memd/src/store/segment/: format.rs  mod.rs  reader.rs  writer.rs
crates/memd/src/store/wal/: format.rs  mod.rs  reader.rs  writer.rs
crates/memd/src/structural/: call_graph.rs  mod.rs  parser.rs  queries.rs  router.rs  storage.rs  symbols.rs  traces.rs
crates/memd/src/text/: mod.rs  sentence.rs  tokenizer.rs
crates/memd/src/tiered/: access_tracker.rs  hot_tier.rs  mod.rs  semantic_cache.rs  tiered_searcher.rs
crates/memd/tests/: hnsw_persistence.rs  test_chunking_integration.rs  trace_tools.rs
evals/: BENCHMARK_DATASETS.md  BENCHMARK_PROTOCOL.md
evals/datasets/compaction/: invariant_test.json
evals/datasets/retrieval/: beir_scifact.json  code_pairs.json  codesearchnet_python.json  hybrid_test.json  sanity_check.json  tiered_eval.json  true_semantic_test.json
evals/datasets/structural/: python_test.json  structural_queries.json  typescript_test.json
evals/harness/: Cargo.toml
evals/harness/src/: lib.rs  main.rs  mcp_client.rs  metrics.rs  statistics.rs
evals/harness/src/suites/: codesearchnet.rs  compaction.rs  hybrid.rs  mcp_conformance.rs  mod.rs  nfcorpus.rs  persistence.rs  retrieval.rs  sanity.rs  scifact.rs  structural.rs  tiered.rs  true_semantic.rs
evals/harness/src/suites/benchmark_protocol/: math.rs  mod.rs  regression.rs  run.rs  types.rs
evals/scripts/: README.md  analyze_benchmark_results.py  run_full_benchmark_suite.sh  run_offline_retrieval_benchmark.sh
memd-skill/: INSTALL.md  README.md  SKILL.md  mcp_config_claude.json  mcp_config_codex.json  skill.md
memd-skill/examples/: INDEX.md  codebase_indexing.md  decision_tracking.md  session_tracking.md
