[workspace]
members = ["crates/*", "evals/harness"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
sha2 = "0.10"
tempfile = "3.10"
memmap2 = "0.9"
rusqlite = { version = "0.38", features = ["bundled"] }
roaring = "0.11"
crc32fast = "1.4"
bincode = { version = "2", features = ["serde"] }
byteorder = "1.5"
parking_lot = "0.12"
# Candle dependencies for embeddings
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
# Removed ONNX/Python dependencies
# ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "download-binaries", "ndarray", "tls-native"] }
# ndarray = "0.17"
hnsw_rs = "0.3"
anndists = "0.1"
half = { version = "2.4", features = ["serde"] }
ureq = "2.10"
dirs = "5.0"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tantivy = "0.24"
rust-stemmers = "1.2"
unicode-segmentation = "1.12"
moka = { version = "0.12", features = ["sync"] }
