[package]
name = "memd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local memory daemon for AI agents - MCP server with hybrid retrieval"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
tokio.workspace = true
async-trait.workspace = true
sha2.workspace = true

memmap2.workspace = true
rusqlite.workspace = true
roaring.workspace = true
crc32fast.workspace = true
bincode.workspace = true
byteorder.workspace = true
parking_lot.workspace = true
ort.workspace = true
hnsw_rs.workspace = true
anndists.workspace = true
half.workspace = true
ndarray.workspace = true
ureq.workspace = true
dirs.workspace = true
tokenizers.workspace = true

[dev-dependencies]
tempfile.workspace = true
