[package]
name = "memd-evals"
version = "0.1.0"
edition = "2021"
description = "Evaluation harness for memd MCP conformance tests"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
